--- a/AutoMall/ViewControllers/PersonalCenter/AddEmployeeVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/AddEmployeeVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,11 +36,31 @@
                     </connections>
                 </button>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GYz-QW-KlO">
-                    <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bon-gX-IyM">
-                            <rect key="frame" x="0.0" y="10" width="375" height="165"/>
+                            <rect key="frame" x="0.0" y="74" width="375" height="165"/>
                             <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPr-l4-sgK">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="Nnv-8l-oN6" customClass="NSLayoutConstraintOnePixelLine"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="Nnv-8l-oN6"/>
+                                        </mask>
+                                    </variation>
+                                    <variation key="widthClass=compact">
+                                        <mask key="constraints">
+                                            <include reference="Nnv-8l-oN6"/>
+                                        </mask>
+                                    </variation>
+                                </label>
                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fux-fB-Wr7">
                                     <rect key="frame" x="16" y="8" width="343" height="35"/>
                                     <constraints>
@@ -149,15 +169,39 @@
                                         <outlet property="delegate" destination="-1" id="nzV-BA-Uea"/>
                                     </connections>
                                 </textField>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kvk-XW-8me">
+                                    <rect key="frame" x="0.0" y="164" width="375" height="1"/>
+                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="6Fn-mq-5Vf" customClass="NSLayoutConstraintOnePixelLine"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="6Fn-mq-5Vf"/>
+                                        </mask>
+                                    </variation>
+                                    <variation key="widthClass=compact">
+                                        <mask key="constraints">
+                                            <include reference="6Fn-mq-5Vf"/>
+                                        </mask>
+                                    </variation>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="9HF-Km-Sve" secondAttribute="trailing" id="1UL-dy-AKI"/>
                                 <constraint firstAttribute="trailing" secondItem="jyP-Ea-q7K" secondAttribute="trailing" constant="16" id="25j-7A-oes"/>
+                                <constraint firstAttribute="bottom" secondItem="kvk-XW-8me" secondAttribute="bottom" id="2na-8f-uKL"/>
+                                <constraint firstAttribute="trailing" secondItem="LPr-l4-sgK" secondAttribute="trailing" id="4e9-zJ-Hho"/>
+                                <constraint firstItem="kvk-XW-8me" firstAttribute="leading" secondItem="Bon-gX-IyM" secondAttribute="leading" id="6VJ-0D-0hq"/>
                                 <constraint firstItem="jyP-Ea-q7K" firstAttribute="leading" secondItem="Bon-gX-IyM" secondAttribute="leading" constant="16" id="71Z-qt-VSG"/>
                                 <constraint firstItem="9HF-Km-Sve" firstAttribute="top" secondItem="jyP-Ea-q7K" secondAttribute="bottom" constant="2" id="7cl-UG-D3a"/>
                                 <constraint firstItem="SHh-wa-o1B" firstAttribute="leading" secondItem="Bon-gX-IyM" secondAttribute="leading" constant="16" id="Bdl-kL-bhx"/>
                                 <constraint firstItem="tNE-33-gAF" firstAttribute="top" secondItem="9HF-Km-Sve" secondAttribute="bottom" constant="2" id="Ftf-wZ-2TV"/>
+                                <constraint firstItem="LPr-l4-sgK" firstAttribute="leading" secondItem="Bon-gX-IyM" secondAttribute="leading" id="G2h-Fz-uQX"/>
                                 <constraint firstAttribute="trailing" secondItem="tNE-33-gAF" secondAttribute="trailing" constant="16" id="H3F-9T-WKY"/>
                                 <constraint firstAttribute="height" constant="165" id="JXH-ya-tcr"/>
                                 <constraint firstItem="9HF-Km-Sve" firstAttribute="leading" secondItem="Bon-gX-IyM" secondAttribute="leading" constant="16" id="Jh3-V2-S6p"/>
@@ -167,6 +211,7 @@
                                 <constraint firstItem="i65-YQ-1Ab" firstAttribute="top" secondItem="GYh-Js-1pH" secondAttribute="bottom" constant="2" id="Qzj-VN-f4W"/>
                                 <constraint firstAttribute="trailing" secondItem="SHh-wa-o1B" secondAttribute="trailing" id="ZRB-SJ-eMb"/>
                                 <constraint firstItem="jyP-Ea-q7K" firstAttribute="top" secondItem="i65-YQ-1Ab" secondAttribute="bottom" constant="2" id="aWZ-Rd-zeu"/>
+                                <constraint firstAttribute="trailing" secondItem="kvk-XW-8me" secondAttribute="trailing" id="cA4-HB-s4F"/>
                                 <constraint firstItem="SHh-wa-o1B" firstAttribute="top" secondItem="Fux-fB-Wr7" secondAttribute="bottom" constant="2" id="cli-8g-010"/>
                                 <constraint firstItem="i65-YQ-1Ab" firstAttribute="leading" secondItem="Bon-gX-IyM" secondAttribute="leading" constant="16" id="fBw-dK-d1p"/>
                                 <constraint firstItem="GYh-Js-1pH" firstAttribute="top" secondItem="SHh-wa-o1B" secondAttribute="bottom" constant="2" id="h1k-j9-tzH"/>
@@ -174,6 +219,7 @@
                                 <constraint firstAttribute="trailing" secondItem="GYh-Js-1pH" secondAttribute="trailing" constant="16" id="okD-hO-f8R"/>
                                 <constraint firstAttribute="trailing" secondItem="i65-YQ-1Ab" secondAttribute="trailing" id="rot-R6-hTr"/>
                                 <constraint firstItem="Fux-fB-Wr7" firstAttribute="top" secondItem="Bon-gX-IyM" secondAttribute="top" constant="8" id="uVK-x6-7l7"/>
+                                <constraint firstItem="LPr-l4-sgK" firstAttribute="top" secondItem="Bon-gX-IyM" secondAttribute="top" id="wdk-Kc-uMQ"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -182,13 +228,13 @@
                         <constraint firstAttribute="bottom" secondItem="Bon-gX-IyM" secondAttribute="bottom" id="Oef-h8-7we"/>
                         <constraint firstItem="Bon-gX-IyM" firstAttribute="leading" secondItem="GYz-QW-KlO" secondAttribute="leading" id="YE1-UV-iZP"/>
                         <constraint firstAttribute="trailing" secondItem="Bon-gX-IyM" secondAttribute="trailing" id="oBN-wq-kT4"/>
-                        <constraint firstItem="Bon-gX-IyM" firstAttribute="top" secondItem="GYz-QW-KlO" secondAttribute="top" constant="10" id="qK4-dO-dK5"/>
+                        <constraint firstItem="Bon-gX-IyM" firstAttribute="top" secondItem="GYz-QW-KlO" secondAttribute="top" constant="74" id="qK4-dO-dK5"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="GYz-QW-KlO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="IOh-Oe-KIT"/>
+                <constraint firstItem="GYz-QW-KlO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="IOh-Oe-KIT"/>
                 <constraint firstAttribute="bottom" secondItem="dsu-z5-c0w" secondAttribute="bottom" id="Krl-mX-XLc"/>
                 <constraint firstAttribute="trailing" secondItem="GYz-QW-KlO" secondAttribute="trailing" id="NCB-zd-xPl"/>
                 <constraint firstItem="GYz-QW-KlO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ncg-YZ-YbI"/>
