--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,18 +15,18 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderPictureSquare" translatesAutoresizingMaskIntoConstraints="NO" id="Sep-Na-f1p">
-                        <rect key="frame" x="8" y="10" width="70" height="70"/>
+                        <rect key="frame" x="16" y="10" width="70" height="70"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="70" id="Fkw-hy-pvz"/>
                             <constraint firstAttribute="width" constant="70" id="Wiu-eH-OHs"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7EM-oO-s1i">
-                        <rect key="frame" x="86" y="10" width="61.5" height="21"/>
+                        <rect key="frame" x="94" y="10" width="61.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="jPm-GL-flV"/>
                         </constraints>
@@ -35,7 +35,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="认证名称内容" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHR-33-P6j">
-                        <rect key="frame" x="86" y="39" width="148" height="40.5"/>
+                        <rect key="frame" x="94" y="39" width="140" height="40.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -60,7 +60,7 @@
                     <constraint firstItem="7EM-oO-s1i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ZWM-Ec-zJR"/>
                     <constraint firstItem="mHR-33-P6j" firstAttribute="leading" secondItem="Sep-Na-f1p" secondAttribute="trailing" constant="8" id="aym-T9-0VI"/>
                     <constraint firstAttribute="trailing" secondItem="RwL-6f-tLX" secondAttribute="trailing" constant="16" id="dYl-Ia-u6v"/>
-                    <constraint firstItem="Sep-Na-f1p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="g3J-YL-UGt"/>
+                    <constraint firstItem="Sep-Na-f1p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="g3J-YL-UGt"/>
                     <constraint firstItem="RwL-6f-tLX" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="uWr-vJ-Amc"/>
                     <constraint firstItem="7EM-oO-s1i" firstAttribute="leading" secondItem="Sep-Na-f1p" secondAttribute="trailing" constant="8" id="wS9-fj-qeQ"/>
                 </constraints>
@@ -71,7 +71,7 @@
                 <outlet property="nameL" destination="7EM-oO-s1i" id="p45-GC-tyc"/>
                 <outlet property="statusBtn" destination="RwL-6f-tLX" id="k8h-RE-NUK"/>
             </connections>
-            <point key="canvasLocation" x="-147" y="0.0"/>
+            <point key="canvasLocation" x="-400" y="0.0"/>
         </tableViewCell>
     </objects>
     <resources>
