--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeSkillListVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,7 +36,7 @@
                 <constraint firstItem="qFr-EQ-gpt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="imZ-dH-nke"/>
                 <constraint firstAttribute="bottom" secondItem="qFr-EQ-gpt" secondAttribute="bottom" id="nyN-8f-uvv"/>
             </constraints>
-            <point key="canvasLocation" x="-169" y="60"/>
+            <point key="canvasLocation" x="63" y="27"/>
         </view>
     </objects>
 </document>
