--- a/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoAddVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -43,17 +43,25 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vej-6b-N6E">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upload-plusSS" translatesAutoresizingMaskIntoConstraints="NO" id="Enp-ue-Yd0" customClass="WPImageView">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upload-plusSS" translatesAutoresizingMaskIntoConstraints="NO" id="Ye1-fF-Q98">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
                                     <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </imageView>
+                                <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Enp-ue-Yd0" customClass="WPImageView">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="211"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
+                                <constraint firstItem="Ye1-fF-Q98" firstAttribute="leading" secondItem="vej-6b-N6E" secondAttribute="leading" id="BbY-2X-7pU"/>
+                                <constraint firstItem="Ye1-fF-Q98" firstAttribute="top" secondItem="vej-6b-N6E" secondAttribute="top" id="EbR-jX-ueG"/>
+                                <constraint firstAttribute="bottom" secondItem="Ye1-fF-Q98" secondAttribute="bottom" id="J0X-j0-BYb"/>
                                 <constraint firstItem="Enp-ue-Yd0" firstAttribute="top" secondItem="vej-6b-N6E" secondAttribute="top" id="YJp-PK-94w"/>
                                 <constraint firstAttribute="bottom" secondItem="Enp-ue-Yd0" secondAttribute="bottom" id="auL-Hq-qTS"/>
                                 <constraint firstAttribute="width" secondItem="vej-6b-N6E" secondAttribute="height" multiplier="16:9" id="gGF-fQ-eHP"/>
                                 <constraint firstAttribute="trailing" secondItem="Enp-ue-Yd0" secondAttribute="trailing" id="gcO-ag-yja"/>
+                                <constraint firstAttribute="trailing" secondItem="Ye1-fF-Q98" secondAttribute="trailing" id="qM4-jC-sCv"/>
                                 <constraint firstItem="Enp-ue-Yd0" firstAttribute="leading" secondItem="vej-6b-N6E" secondAttribute="leading" id="sMz-cm-fnC"/>
                             </constraints>
                         </view>
@@ -882,7 +890,7 @@
                 <constraint firstItem="MUN-he-tzY" firstAttribute="top" secondItem="Anl-hI-GET" secondAttribute="bottom" id="wXr-qc-EQf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-1520" y="240"/>
+            <point key="canvasLocation" x="-1520.5" y="239.5"/>
         </view>
     </objects>
     <resources>
